infra/k8s/base/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-httproute
  namespace: mychat
  labels:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/instance: mychat
spec:
  parentRefs:
    - name: gateway
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: "/api"
      backendRefs:
        - name: api-clusterip
          port: 80
    - matches:
      - path:
          type: PathPrefix
          value: "/"
      backendRefs:
        - name: web-clusterip
          port: 80
